Add springone 2021 workshop (#154)
* Initial commit

* Updated codelab category

* added new prereq

* Next iteration of codelab for springone workshop

* Updated last sections of the codelab - v1 ready for review and can be finalized if all looks good

* Updated workshop steps and few output screen

* Updated workshop steps and few output screen

* Updated takeaway section and timing for each section

Co-authored-by: Tamimi <tamimi@solace.com>
Co-authored-by: Tamimi Ahmad <TamimiGitHub@users.noreply.github.com>
Co-authored-by: Marc DiPasquale <1815312+Mrc0113@users.noreply.github.com>